--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
     </div>
     
     <script>
-        const API_BASE_URL = 'http://localhost:3000/api';
+        const API_BASE_URL = 'https://motiminder-backend.vercel.app/api';
 
         // Load existing reminders when page loads
         document.addEventListener('DOMContentLoaded', function() {
